--- a/Proj1 - Portfolio/styles/styles.css
+++ b/Proj1 - Portfolio/styles/styles.css
@@ -41,7 +41,6 @@ header {
     border-radius: 50%;
     display: inline-flex;
     cursor: pointer;
-
 }
 
 .logo img {
@@ -86,7 +85,7 @@ header {
 .text h1{
     color: #fff;
     margin-top: 10px;
-    font-size: 38px;
+    font-size: 44px;
 }
 
 .text span {
@@ -97,7 +96,7 @@ header {
     color: white;
     font-weight: 300;
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .sobre-background {
@@ -373,7 +372,7 @@ padding: 80px 9%;
 .project-container .project-box {
     position: relative;
     border-radius: 2rem;
-    box-shadow: 0 0 1rem #2a9c9c;
+    box-shadow: 0 0 1rem #2a659c;
     overflow: hidden;
     display: flex;
     cursor: pointer;
@@ -394,7 +393,7 @@ padding: 80px 9%;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .1), rgb(0, 253, 253));
+    background: linear-gradient(rgba(0, 0, 0, .1), rgb(0, 118, 253));
     display: flex;
     justify-content: center;
     align-items: center;
