--- a/Eleos/Home/style.css
+++ b/Eleos/Home/style.css
@@ -8,24 +8,38 @@
 
 body {
     height: 100vh;
-    width: 99vw;
+    width: 100vw;
     background-color: white;
 }
 
 header {
-    height: 100px;
+    height: 80px;
     padding: 0 252px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #cccccc63;
 }
 
 .logo {
     font-family: 'Oleo Script', cursive;
     font-size: 42px;
+    color: #09C184;
+    text-decoration: none;
 }
 
-a {
+.logo:hover {
+    color: #0A8967;
+    transition: .2s ease-in-out;
+}
+
+.active {
+    color: #0A8967;
+    margin-right: 40px;
+    font-weight: bold;
+}
+
+#item {
     font-size: 16px;
     font-weight: bold;
     color: #09C184;
@@ -33,36 +47,42 @@ a {
     margin-right: 40px;
 }
 
-a:hover { 
+#item:hover { 
     transition: .2s ease-in-out;
     cursor: pointer;
     color: #0A8967;
 }
 
-#login {
+.login {
     border: 1px solid #09C184;
     padding: 8px 14px;
     border-radius: 5px;
+    font-weight: bold;
+    text-decoration: none;
+    margin-right: 40px;
+    color: #09C184;
 }
 
-#login:hover {
+.login:hover {
     cursor: pointer;
     background-color: #0A8967;
     color: #fff;
     transition: .2s ease-in-out;
-    border: none;
+    border: 1px solid #ffffff00;
 }
 
-#cadastro {
+.cadastro {
     background-color: #09C184;
     color: #fff;
+    text-decoration: none;
     padding: 8px 14px;
     border-radius: 5px;
 }
 
-#cadastro:hover {
+.cadastro:hover {
     transition: .2s ease-in-out;
     cursor: pointer;
+    color: #fff;
     background-color: #0A8967;
 }
 
@@ -85,6 +105,12 @@ h1 {
     font-weight: 900;
 }
 
+h2 {
+    color: #09C184;
+    font-size: 32px;
+    padding-bottom: 20px;
+}
+
 span {
     color: #09C184;
     font-size: 20px;
@@ -93,13 +119,16 @@ span {
 
 #span {
     margin-left: 20px;
-}
-
-#span {
     cursor: pointer;
 }
 
-p{
+#span:hover {
+    text-decoration: underline;
+}
+
+
+
+.descricao{
     font-size: 20px;
     color: #7e7e7e;
     width: 80%;
@@ -112,17 +141,17 @@ button {
     font-size: 16px;
     font-weight: 700;
     padding: 20px 5px;
-    border-radius: 1px;
-    color: #fff;
-    border: none;
-    background-color: #09C184;
+    border-radius: 10px;
+    color: #09C184;
+    border: 2px solid #09C184;
+    background-color: #fff;
 }
 
 button:hover {
     cursor: pointer;
     background-color: #09C184;
     color: #fff;
-    transition: .5s ease-in-out;
+    transition: .3s ease-in-out;
     transform: scale(1.05);
 }
 
@@ -131,7 +160,7 @@ button:hover {
 }
 
 img {
-    width: 90%;
+    width: 100%;
 }
 
 img:hover {
@@ -145,12 +174,12 @@ img:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px; /* Espaçamento entre os ícones */
     background-color: #f6f6f6;
-    padding: 20px 0;
+    padding: 60px 0;
 }
 
 i {
-    font-size: 28px;
-    color: #09C184;
+    font-size: 26px;
+    color: #0A8967;
 }
 
 .grid-item {
@@ -161,4 +190,62 @@ i {
     margin-top: 10px; /* Espaçamento entre o ícone e a descrição */
     color: #737373;
     font-weight: 400;
+}
+
+.para {
+    font-size: 20px;
+    color: #737373;
+    text-align: justify;
+}
+
+.donation {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+}
+
+.textos {
+    max-width: 1160px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.cards-container {
+    max-width: 1160px;
+    margin: 0 auto;
+}
+
+.img-tuto {
+    width: 70%;
+
+}
+
+.textos {
+    padding: 20px;
+}
+
+
+.card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+    box-shadow: 0px 0px 5px 0px #aaa;
+    width: 300px;
+    display: inline-block;
+}
+
+.footer {
+    background-color: #0D192B;
+    color: #fff;
+    text-align: center;
+    padding: 100px 0;
+}
+
+.footer p {
+    color: #fff;
+    text-decoration: none;
 }
