--- a/Eleos/Recuperar Senha/style.css
+++ b/Eleos/Recuperar Senha/style.css
@@ -34,17 +34,16 @@
 }
 
 .top > h1 {
-    font-size: 48px;
+    font-size: 28px;
     color: #09C184;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 10px;
+
 }
 
-a {
-    color: #000;
-    margin-left: 5px;
-    font-weight: bold;
+p {
+    padding: 30px 0;
+    color: #606060;
 }
 
 b:hover{
