--- a/Eleos/Home/style.css
+++ b/Eleos/Home/style.css
@@ -4,6 +4,7 @@
     font-family: 'Inter', sans-serif;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -34,7 +35,7 @@ header {
 }
 
 .active {
-    color: #0A8967;
+    color: #45b094;
     margin-right: 40px;
     font-weight: bold;
 }
@@ -169,21 +170,40 @@ img:hover {
     transition: .5s;
 }
 
+.beneficios {
+    background-color: #f6f6f6;
+    padding: 40px 0;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px; /* Espaçamento entre os ícones */
-    background-color: #f6f6f6;
-    padding: 60px 0;
+    gap: 10px; /* Espaçamento entre os ícones */
+    width: 97%;
+    margin: 0 auto;
 }
 
 i {
-    font-size: 26px;
+    font-size: 28px;
     color: #0A8967;
+
+}
+
+i:hover {
+    color: #09C184;
 }
 
 .grid-item {
     text-align: center;
+    max-width: 200px;
+    margin: 0 auto;
+    color: #09C184;
+}
+
+.grid-item:hover ,
+i:hover {
+    transform: scale(1.1);
+    transition: .2s ease-in-out;
 }
 
 .description {
@@ -200,21 +220,23 @@ i {
 
 .donation {
     display: flex;
-    width: 100vw;
+    flex-direction: column;
+    width: 100%;
     justify-content: center;
     align-items: center;
     padding: 40px 0;
+    text-align: center;
 }
 
 .textos {
-    max-width: 1160px;
+    max-width: 74%;
     text-align: center;
     margin: 0 auto;
 }
 
 .cards-container {
-    max-width: 1160px;
-    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .img-tuto {
@@ -238,14 +260,16 @@ i {
     display: inline-block;
 }
 
-.footer {
-    background-color: #0D192B;
-    color: #fff;
-    text-align: center;
-    padding: 100px 0;
+.sobrenos {
+    padding: 40px 0;
+    background-color: #f6f6f6;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.footer p {
-    color: #fff;
-    text-decoration: none;
+.sobre-content {
+    max-width: 74%;
 }
