--- a/Eleos/Home/style.css
+++ b/Eleos/Home/style.css
@@ -273,3 +273,17 @@ i:hover {
 .sobre-content {
     max-width: 74%;
 }
+
+footer{
+    background-color: #0A8967;
+    padding: 40px;
+    color: #fff;
+    text-align: center;
+}
+
+footer > a{
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    cursor: pointer;
+}
