--- a/Eleos/Home/style.css
+++ b/Eleos/Home/style.css
@@ -179,7 +179,7 @@ img:hover {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px; /* Espaçamento entre os ícones */
-    width: 97%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -274,16 +274,39 @@ i:hover {
     max-width: 74%;
 }
 
-footer{
-    background-color: #0A8967;
-    padding: 40px;
+footer {
+    background-color: #0D192B;
     color: #fff;
+    padding: 20px 0;
     text-align: center;
 }
 
-footer > a{
+.container {
+    max-width: 560px;
+    margin: 0 auto;
+}
+
+
+/* Estilos para o texto dentro do footer */
+.container p {
+    margin: 10px 0;
+    font-size: 16px;
+    text-align: justify;
+}
+
+.copyright {
+    margin: 10px 0;
+}
+
+/* Estilos para os links */
+footer a {
     color: #fff;
-    font-weight: 500;
     text-decoration: none;
-    cursor: pointer;
+    margin: 0 10px;
+}
+
+.Logo2 {
+    font-size: 28px;
+    color: #fff;
+    text-decoration: none;
 }
