--- a/Eleos/Home/style.css
+++ b/Eleos/Home/style.css
@@ -116,6 +116,7 @@ span {
     color: #09C184;
     font-size: 20px;
     font-weight: 500;
+    text-decoration: underline;
 }
 
 #span {
@@ -221,7 +222,6 @@ i:hover {
 .donation {
     display: flex;
     flex-direction: column;
-    width: 100%;
     justify-content: center;
     align-items: center;
     padding: 40px 0;
@@ -236,7 +236,7 @@ i:hover {
 
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .img-tuto {
@@ -253,7 +253,7 @@ i:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px;
-    margin: 20px;
+    margin: 10px;
     text-align: center;
     box-shadow: 0px 0px 5px 0px #aaa;
     width: 300px;
@@ -282,7 +282,7 @@ footer {
 }
 
 .container {
-    max-width: 560px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -292,15 +292,17 @@ footer {
     margin: 10px 0;
     font-size: 16px;
     text-align: justify;
+    color: #b8b8b8;
 }
 
 .copyright {
     margin: 10px 0;
+    color: #b8b8b8;
 }
 
 /* Estilos para os links */
 footer a {
-    color: #fff;
+    color: #b8b8b8;
     text-decoration: none;
     margin: 0 10px;
 }
