--- a/Portfolio - 2025/style.css
+++ b/Portfolio - 2025/style.css
@@ -370,36 +370,73 @@
   justify-content: center;
 }
 
-.projeto {
-  background: #f5f5f5;
-  border-radius: 16px;
-  padding: 1.5rem;
-  max-width: 300px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  text-align: left;
-  transition: 0.3s;
-}
-
 .projeto h3 {
   margin-bottom: 0.5rem;
   color: #333;
 }
 
-.projeto p {
-  font-size: 0.95rem;
-  color: #555;
-  margin-bottom: 1rem;
-}
-
-.projeto a {
-  color: #252525;
-  text-decoration: none;
-  font-weight: 500;
+.projeto {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  border-radius: 16px;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   transition: 0.3s;
 }
 
-.projeto a:hover {
-  text-decoration: underline;
+.projeto h3,
+.projeto p,
+.projeto a {
+  margin: 0;
+  padding: 0.5rem 1rem;
+  text-align: left;
+  color: #fff;
+}
+
+.projeto-overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.8); /* fundo escuro com transparência */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  text-align: center;
+  padding: 1rem;
+}
+
+.projeto:hover {
+transform: translateY(-5px);
+}
+
+.projeto:hover .projeto-overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+#nutriacao {
+  background-image: url(/assets/nutriacao.png); 
+  background-size: cover;
+}
+
+#jornada {
+  background-image: url(/assets/JDE.png); 
+  background-size: cover;
+}
+
+#rostie {
+  background-image: url(/assets/rostie.png); 
+  background-size: cover;
+}
+
+#eleos {
+  background-image: url(/assets/eleos.png); 
+  background-size: cover;
 }
 
 .contato {
